--- a/style1.css
+++ b/style1.css
@@ -82,12 +82,11 @@
 #konten6{
     background: url(img/core-img/work-progress.png);
     background-size: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     background-repeat: no-repeat;
 }
 #konten_jumbotron6{
     background: transparent;
-    height: 100vh;
 }
 #cardProjects{
     position: relative;
@@ -107,16 +106,28 @@
     border: none;
     background: transparent;
 }
-#konten_7{
+section{
     background-image: url(img/bg-img/cta.jpg);
-    height: 800px;
+    height: 500px;
+    width: 100%;
+    position: relative;
+
+    /* background-size: cover; */
+    /* background-repeat: no-repeat; */
 }
 .bungkus{
-    background-color:rgba(61, 33, 97, 0.4) ;
+    background-color:rgba(61, 33, 97, 0.5) ;
     height: 100%;
     width: 100%;
+    /* padding:100; */
 }
-
+#konten7{
+    background-color: #280a3d;
+    /* height: 600px; */
+}
+.isifooter a{
+    color: grey;
+}
 
 
 
